force-app/main/default/objects/Adoption_Request__c/Adoption_Request__c.object-meta.xml
<CustomObject>
    <label>Adoption Request</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adoption Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>