force-app/main/default/objects/Adoption_Request__c/fields/Adopter_Name__c.field-meta.xml
<CustomField>
    <fullName>Adopter_Name__c</fullName>
    <label>Adopter Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>