force-app/main/default/objects/Adoption_Request__c/fields/Adopter_Phone__c.field-meta.xml
<CustomField>
    <fullName>Adopter_Phone__c</fullName>
    <label>Adopter Phone</label>
    <type>Phone</type>
</CustomField>