force-app/main/default/objects/Adoption_Request__c/fields/Adoption_Stage__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Stage__c</fullName>
    <defaultValue>"Submitted"</defaultValue>
    <label>Adoption Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>