force-app/main/default/objects/Adoption_Request__c/fields/Dog__c.field-meta.xml
<CustomField>
    <fullName>Dog__c</fullName>
    <label>Dog</label>
    <referenceTo>Dog__c</referenceTo>
    <relationshipLabel>Adoption Requests</relationshipLabel>
    <relationshipName>Adoption_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>