force-app/main/default/objects/Adoption_Request__c/fields/Shelter_Owner__c.field-meta.xml
<CustomField>
    <fullName>Shelter_Owner__c</fullName>
    <label>Shelter Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AdoptionRequests</relationshipName>
    <type>Lookup</type>
</CustomField>