force-app/main/default/objects/Adoption_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dog__c</columns>
    <columns>Status__c</columns>
    <columns>Adopter_Name__c</columns>
    <columns>Adopter_Email__c</columns>
    <columns>Request_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>